SERVER-11294: create extent by default line we did in 2.4